# composition-extra

./: .gitignore  .project-settings.yml  Readme.md  composition-extra.cabal
src/Control/Applicative/: Syntax.hs
src/Control/Monad/: Composition.hs  Syntax.hs
src/Control/Monad/Composition/: Five.hs  Four.hs  Six.hs  Three.hs  Two.hs
src/Control/Monad/Syntax/: Five.hs  Four.hs  Six.hs  Three.hs  Two.hs
src/Data/Composition/: Contravariant.hs  Functor.hs  Monad.hs  Slip.hs
src/Data/Composition/Functor/: Contravariant.hs
src/Data/Function/: Apply.hs  Flip.hs  Slip.hs  SlipTwist.hs  Syntax.hs  Twist.hs
src/Data/Function/Contravariant/: Composition.hs  Syntax.hs
src/Data/Functor/: Composition.hs  Syntax.hs
src/Data/Functor/Contravariant/: Composition.hs  Syntax.hs
